Fix overflow-y scroll, refactor date and category in update and add task into independent methods

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -149,13 +149,12 @@ body {
   color: black;
 }
 
-
 .main {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   height: 95%;
-  overflow-y: auto;
+  overflow-y: none;
   background: url("../image/ocean-bg.jpg") no-repeat center center fixed;
   background-size: cover;
 }
