--- a/src/css/sticky-footer.css
+++ b/src/css/sticky-footer.css
@@ -9,7 +9,6 @@ body {
 /* Sticky Footer */
 html, body {
   height: 100%;
-  overflow-y: hidden;
 }
 body {
   display: flex;
